--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 javac.debug=true
-user.properties.file=C:\\Users\\Ken Healy\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\kheal\\AppData\\Roaming\\NetBeans\\22\\build.properties
